* [Storybook] Fixed gap between sortable list items at About story

--- a/storybook/stories/About/About.stories.scss
+++ b/storybook/stories/About/About.stories.scss
@@ -212,7 +212,11 @@ main {
 
 /* Sortable */
 .list-area {
+  display: inline-flex;
+  flex-flow: column nowrap;
+  max-width: 300px;
   width: 100%;
+  gap: 0.25rem;
 }
 
 /* InputGroup */
